# SDL2-starter-template

./: .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: game.cpp.66DE9B77D5074136.idx  game.h.45F8FEC1D3CD7E5F.idx  main.cpp.0DAAFD85C2C3F0AA.idx  window.cpp.A4101771EB14875A.idx  window.h.A6E366182344F354.idx
include/: game.h  window.h
src/: game.cpp  main.cpp  window.cpp
